TourGuideService.java: refactor list of recommendedUserAttractionsSorted